update schema with icon
